newSale api final upload
