# src/databases/models/interior.js
@@ -24,12 +24,18 @@ exports.pagination = async(order, type, localCode, conType, page, contents) =>{
 }
 
 exports.pageForSearch = async(name1, name2, name3, conType, page, contents) =>{
-    return await db.query(`select
-    *
+    return await db.query(`select case
+	when contents_name like ? then locate(?, contents_name)+100
+	when contents_name like ? then locate(?, contents_name)+200
+	when contents_name like ? then locate(?, contents_name)+300
+    else 10000
+	end as zorder, contents_name, contents_type, local_address, thumnail_image, preview_video_link, views
     from interior
-    where contents_type = ? and (contents_name like ? || contents_name like ? || contents_name like ?)
-    order by views desc limit ? offset ?`
-    ,[conType, `%${name1}%`, `%${name2}%`, `%${name3}%`, contents, page * contents]);
+    where contents_type = ?
+    order by 
+	    zorder
+        limit ? offset ?`
+    ,[`%${name1}%`,name1, `%${name2}%`, name2, `%${name3}%`, name3, conType, contents, page * contents]);
 }
 
 //isExist 는 값이 DB 에 있으면 1, 없으면 0 출력
@@ -42,16 +48,6 @@ exports.rowNum = async()=>{
     return await db.query('select count(*) cnt from interior');
 }
 
-// exports.search = async(name1, name2, name3)=>{
-//     return await db.query(`select * from interior where contents_name like \'%${name1}%\' || contents_name like \'%${name2}%\' || contents_name like \'%${name3}%\'`
-//     , [name1, name2, name3]);
-// }
-
-exports.search = async(name1, name2, name3)=>{
-
-    indata1=`%${name1}%`;
-    indata2=`%${name2}%`;
-    indata3=`%${name3}%`;
-    return await db.query(`select * from interior where contents_name like ? || contents_name like ? || contents_name like ?`
-    , [indata1, indata2, indata3]);
+exports.upViews = async(id)=>{
+    await db.query(`update interior set views=views+1 where id = ?`, id)
 }
